expense_tracker/microshift/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker
  namespace: edge-demo
spec:
  selector: { app: expense-tracker }
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
